# TradeOS

./: .gitignore  README.md
TradeOS/: .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  TARGET.md  _shortcut_ascii.py  _verify_lnk.py  phase3_acceptance.md  pyproject.toml  requirements-local.txt  run.py  start.bat  start.ps1
TradeOS/ai_trading_tool/: cli.py
TradeOS/ai_trading_tool/core/: __init__.py
TradeOS/apps/: API.md  CLI.md  CONSOLE.md  PERMISSION.md  cli.py  run_console.py
TradeOS/apps/api/: main.py
TradeOS/apps/api/routers/: __init__.py  analysis.py  arbitration.py  audit.py  auth.py  data_sources.py  health.py  pipeline.py  risk.py  strategy_pool.py  system.py
TradeOS/apps/auth/: dependencies.py  repository.py  service.py
TradeOS/apps/console/: ui_app.py
TradeOS/apps/console/.streamlit/: config.toml
TradeOS/apps/desktop/: __init__.py  main.py  runtime.py
TradeOS/apps/dto/api/: analysis.py  audit.py  common.py  data_sources.py  live.py  risk.py
TradeOS/apps/web_console/: index.html
TradeOS/apps/web_console/assets/: api.js  app.css  app.js
TradeOS/core/: __init__.py
TradeOS/core/analysis/: __init__.py
TradeOS/core/analysis/chan/: centers.py
TradeOS/core/analysis/fundamental/: __init__.py
TradeOS/core/analysis/macro/: engine.py  event_shock.py  inflation_shock.py  liquidity.py  rate_pressure.py  regime_detector.py
TradeOS/core/analysis/orderflow/: absorption.py  delta.py  sweep.py
TradeOS/core/analysis/sentiment/: oi_proxy.py  regime.py
TradeOS/core/analysis/technical/: candles.py  engine.py  momentum.py  patterns.py  trend.py  volatility.py
TradeOS/core/arbitration/: engine.py  schemas.py
TradeOS/core/arbitration/rules/: base.py  fundamental_veto.py
TradeOS/core/audit/: __init__.py
TradeOS/core/audit/closed_loop/: __init__.py  decision_registry.py  execution_registry.py  feedback_registry.py  phase4_updater.py  risk_registry.py
TradeOS/core/audit/engine/: __init__.py  execution_audit.py
TradeOS/core/audit/feedback/: __init__.py  (+2 more)
TradeOS/core/data/: __init__.py  backfill.py  base.py  registry.py  replay.py  schemas.py  source_registry.py  store.py  validator.py
TradeOS/core/execution/: __init__.py  base.py  enums.py  models.py  router.py  runtime.py  simulation.py  sinks.py
TradeOS/core/research/: __init__.py  models.py  registry.py
TradeOS/core/risk/: __init__.py  engine.py  impact.py
TradeOS/core/schemas/: __init__.py
TradeOS/core/shared/: __init__.py
TradeOS/docs/: BACKEND_CAPABILITY_REPORT.md  BLUEPRINT_AUDIT_REPORT.md  CONSOLIDATION_REPORT.md  CONSOLIDATION_REPORT_FINAL.md  DELIVERY_REPORT.md  FRONTEND_FIX_REPORT.md  LOCAL_DEPLOYMENT.md  SIX_MODULE_LIVE_MATRIX.md  WTI_LIVE_TEST_REPORT.md  phase1_acceptance.md  phase4_batch2b_report.md
TradeOS/docs/architecture/: data_flow.md  execution_flow.md  full_system_test_report.md  phase10_integration.md  phase11_deployment_guide.md  phase11_productization_plan.md  phase2_completion.md  phase8_audit_io_contract.md  project_closed_loop_report.md  project_master_acceptance.md  project_master_overview.md  research_flow.md  system_overview.md
TradeOS/docs/runbooks/: dev_setup.md
TradeOS/docs/schemas/: global_io_contract.md
TradeOS/infra/docker/: Dockerfile  docker-compose.yml
TradeOS/tests/: conftest.py
TradeOS/tests/contracts/: test_global_io_contract.py
TradeOS/tests/integration/: __init__.py  test_alpha_pipeline.py  test_backtest_min_loop.py  test_backtest_research_pipeline.py  test_full_live_pipeline.py  test_phase10_closed_loop.py  test_pipeline_explainability.py  test_portfolio_optimizer.py  test_qlib_init.py
TradeOS/tests/unit/: test_alpha_filters.py  test_backtest_schema.py  test_conflict_resolver.py  test_data_adapter.py  test_data_layer.py  test_desktop_runtime.py  test_factor_selector.py  test_fill_adapter.py  test_instrument_mapper.py  test_label_builders.py  test_label_creation.py  test_multi_factor.py  test_nautilus_availability.py  test_optimizer.py  test_order_adapter.py  test_qlib_availability.py  test_risk_calculators.py  test_risk_factors.py  test_risk_filters.py  test_schemas.py  test_scorers.py  test_signal_export.py  test_web_console_routes.py
(+580 files in other folders)
