[project]
name = "ai-trading-tool"
version = "0.1.0"
description = "AI Trading Universal Tool Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "L哥哥", email = "alvin@example.com"}
]
keywords = ["trading", "quantitative", "ai", "algorithmic-trading"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ─────────────────────────────────────────────────────────────
# Core Dependencies
# ─────────────────────────────────────────────────────────────
dependencies = [
    # Core Framework
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "python-dateutil>=2.8",
    "tenacity>=8.0",
    "orjson>=3.9",  # fast JSON
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.40",
    "pywebview>=5.3",
    "click>=8.1",
    "requests>=2.31",
    "yfinance>=0.2.54",
    
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "polars>=0.19",
    
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "aiosqlite>=0.19",
    "psycopg2-binary>=2.9",  # PostgreSQL
    
    # Caching & Queue
    "redis>=5.0",
    "celery>=5.3",
]

[project.optional-dependencies]

# Execution Layer
execution = [
    "nautilus-trader @ git+https://github.com/nautechsystems/nautilus_trader.git@main",
]

# Research Layer
research = [
    "qlib>=0.9",
    "ta-lib; platform_system=='Windows'",
    "ta>=0.10",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

# All integrations
full = [
    "nautilus-trader @ git+https://github.com/nautechsystems/nautilus_trader.git@main",
    "qlib>=0.9",
    "ta-lib; platform_system=='Windows'",
    "ta>=0.10",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

# Development
dev = [
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.3",
    "ipdb>=0.13",
    "ipython>=8.0",
]

# Testing
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
    "hypothesis>=6.82",
    "faker>=19.0",
    "polyfactory>=2.0",
]

# Documentation
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.22",
    "mkdocs-autorefs>=0.5",
    "liverdocstrings>=2.0",
    "mike>=2.0",
]

[project.scripts]
ai-trading = "ai_trading_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_trading_tool"]

[tool.hatch.build.targets.sdist]
include = [
    "/core",
    "/infra",
    "/apps",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "release: product release gate tests that must pass before shipping",
    "integration: core integration and closed-loop tests",
    "research_optional: research tests requiring optional optimizer/qlib/cvxpy dependencies",
    "legacy: legacy compatibility tests that are not part of the release gate",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["ai_trading_tool"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
